[package]
name = "yt-chain"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-redis = "0.5"
actix-web = { version = "0.7", features = ["ssl"] }
openssl = "0.10"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "0.7"
toml = "0.4"
num_cpus = "1.10"
futures = "0.1"
dotenv = "0.13"
digest = "0.8"
sha2 = "0.8"
lazy_static = "1.2"
bytes = "0.4"
byteorder = "1.2"
libc = "0.2"
sled = { version = "0.22", features = ["compression"] }
chrono = "0.4"
url = "1.7"
reqwest = "0.9"
juniper = "0.11"
bincode = "1.1"

[target.'cfg(any(not(target_arch = "arm")))'.dependencies]
gpu_mining = { features = ["cuda"], path = "gpu_mining", optional = true }


# sled needs nightly feature to be compiled on 32bit target like raspberry pi
[target.'cfg(all(target_arch = "arm"))'.dependencies]
sled = { version = "0.22", features = ["nightly", "compression"] }

[features]
default = ["sha256"]
cuda = ["gpu_mining"]
sha256 = []
sha384 = []
sha512 = []

[profile.release]
opt-level = 3
lto = false