[package]
name = "gpu_mining"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
cmake = "0.1"

[dependencies]
libc = "0.2"

[features]
default = ["cuda"]
cuda = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false